# terminal-query

./: LICENSE  README.md  main.py  pyproject.toml
src/terminal_query/: __init__.py  cli.py
src/terminal_query/llm/: anthropicapi.py  client.py  messages.py  openaiapi.py
