[project]
name = "terminal-query"
version = "0.1.0"
description = "Terminal Query is a powerful CLI tool that allows you to send queries to a Language Model (LLM) directly from your terminal. It captures your terminal input, integrates with `tmux` panes if available, and provides intelligent responses using your preferred LLM."
readme = "README.md"
authors = [
    { name = "Justin Pounders", email = "jmpounders@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "click>=8.1.8",
    "openai>=1.60.2",
]

[project.scripts]
terminal-query = "terminal_query.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
